# gnome-quick-share

./: .gitignore  Cargo.toml  LICENSE  README.md  meson.build
app/gtk/: Cargo.toml  build.rs
app/gtk/data/: io.github.weversonl.GnomeQS.desktop  io.github.weversonl.GnomeQS.gschema.xml  io.github.weversonl.GnomeQS.metainfo.xml  io.github.weversonl.GnomeQuickShare.desktop  io.github.weversonl.GnomeQuickShare.gschema.xml  io.github.weversonl.GnomeQuickShare.metainfo.xml  meson.build
app/gtk/po/: POTFILES  meson.build  pt_BR.po
app/gtk/src/: bridge.rs  config.rs  i18n.rs  main.rs  settings.rs  state.rs  transfer_history.rs  tray_ipc.rs
app/gtk/src/ui/: cursor.rs  device_tile.rs  mod.rs  pulse.rs  receive_view.rs  send_view.rs  settings_window.rs  transfer_row.rs  window.rs
app/tray-helper/: Cargo.toml
app/tray-helper/src/: main.rs
aur/: .SRCINFO  PKGBUILD  PKGBUILD.PROD
build-aux/: cargo-build.sh  uninstall.sh
core_lib/: Cargo.toml  build.rs
core_lib/src/: bin.rs  channel.rs  lib.rs  manager.rs  utils.rs  wifi_direct.rs
core_lib/src/hdl/: ble.rs  blea.rs  inbound.rs  info.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
docs/: index.html  script.js  style.css
packaging/deb/: build.sh  postinst
packaging/flatpak/: build.sh  io.github.weversonl.GnomeQS.json  io.github.weversonl.GnomeQuickShare.json
packaging/rpm/: build.sh  gnome-quick-share.spec  gnomeqs.spec
