# Desktop entry
install_data(
  'io.github.weversonl.GnomeQuickShare.desktop',
  install_dir: get_option('datadir') / 'applications',
)

# AppStream metainfo
install_data(
  'io.github.weversonl.GnomeQuickShare.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

# GSettings schema
install_data(
  'io.github.weversonl.GnomeQuickShare.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

# Icons — PNG
install_data(
  'icons/32x32.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '32x32' / 'apps',
  rename: 'io.github.weversonl.GnomeQuickShare.png',
)

install_data(
  'icons/128x128.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps',
  rename: 'io.github.weversonl.GnomeQuickShare.png',
)

install_data(
  'icons/128x128@2x.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256@2x' / 'apps',
  rename: 'io.github.weversonl.GnomeQuickShare.png',
)

install_data(
  'icons/tray_mono.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '32x32' / 'apps',
  rename: 'io.github.weversonl.GnomeQuickShare-symbolic.png',
)

# Icons — SVG
install_data(
  'icons/hicolor/scalable/actions/io.github.weversonl.GnomeQuickShare-airdrop-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)

install_data(
  'icons/hicolor/scalable/actions/io.github.weversonl.GnomeQuickShare-upload-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)

install_data(
  'icons/hicolor/scalable/actions/io.github.weversonl.GnomeQuickShare-send-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)

install_data(
  'icons/hicolor/scalable/actions/io.github.weversonl.GnomeQuickShare-receive-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)

install_data(
  'icons/hicolor/scalable/status/io.github.weversonl.GnomeQuickShare-tray-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'status',
)

install_data(
  'icons/hicolor/scalable/status/io.github.weversonl.GnomeQuickShare-tray-dark-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'status',
)

install_data(
  'icons/hicolor/scalable/status/io.github.weversonl.GnomeQuickShare-tray-light-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'status',
)
